# edge-ai-libraries

./: .gitmodules  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  dependabot.yml
microservices/audio-analyzer/: README.md  pyproject.toml  setup_docker.sh  setup_host.sh
microservices/audio-analyzer/audio_analyzer/: main.py
microservices/audio-analyzer/audio_analyzer/api/: router.py
microservices/audio-analyzer/audio_analyzer/core/: audio_extractor.py  settings.py  transcriber.py
microservices/audio-analyzer/audio_analyzer/schemas/: transcription.py  types.py
microservices/audio-analyzer/audio_analyzer/utils/: file_utils.py  hardware_utils.py  logger.py  minio_handler.py  model_manager.py  transcription_utils.py  validation.py
microservices/audio-analyzer/docker/: Dockerfile  compose.dev.yaml  compose.yaml
microservices/audio-analyzer/docs/user-guide/: Overview.md  get-started.md  how-to-build-from-source.md  index.rst  overview-architecture.md
microservices/audio-analyzer/tests/: conftest.py
microservices/audio-analyzer/tests/test_api/: test_health.py  test_models.py  test_transcription.py
microservices/audio-analyzer/tests/test_core/: test_audio_extractor.py  test_transcriber.py
microservices/audio-analyzer/tests/test_utils/: test_file_utils.py  test_hardware_utils.py  test_minio_handler.py  test_model_manager.py  test_transcription_utils.py  test_validation.py
microservices/dlstreamer-pipeline-server/plugins/gst-udf-loader/: .gitignore  CMakeLists.txt  README.md
microservices/document-ingestion/pgvector/: .dockerignore  README.md  config.py  db_config.py  main.py  pyproject.toml  run.sh  utils.py
microservices/document-ingestion/pgvector/app/: .env  config.py  db_config.py  document.py  logger.py  main.py  store.py  url.py  utils.py
microservices/document-ingestion/pgvector/docker/: Dockerfile  compose-dev.yaml  compose.yaml
microservices/document-ingestion/pgvector/docs/: dataprep-api.yml  get-started.md  how-to-customize.md  system-requirements.md
microservices/document-ingestion/pgvector/tests/: conftest.py  test_db_config.py  test_main.py
microservices/multimodal-embedding-serving/: .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  app.py  compose.arc-gpu.yaml  compose.yaml  pyproject.toml  setup.sh
microservices/multimodal-embedding-serving/docker/: Dockerfile  Dockerfile.arc-gpu  compose.arc-gpu.yaml  compose.yaml
microservices/multimodal-embedding-serving/docs/user-guide/: Overview.md  get-started.md  how-to-build-from-source.md  index.rst  system-requirements.md
microservices/multimodal-embedding-serving/scripts/: install_ubuntu_gpu_drivers.sh
microservices/multimodal-embedding-serving/src/: common.py  models.py  utils.py
microservices/object-store/minio-store/: .dockerignore  README.md  pyproject.toml  run.sh
microservices/object-store/minio-store/docker/: Dockerfile  compose-dev.yaml  compose.yaml
microservices/object-store/minio-store/minio_store/: app.py  schema.py  store.py  util.py
microservices/object-store/minio-store/tests/: conftest.py  test_deleteobject.py  test_getobject.py  test_minio_client.py  test_upload.py
microservices/visual-data-preparation-for-retrieval/vdms/: .dockerignore  README.md  pyproject.toml  setup.sh
microservices/vlm-openvino-serving/: .dockerignore  .gitignore  README.md  compose.yaml  logging.conf  pyproject.toml  setup.sh
microservices/vlm-openvino-serving/docker/: Dockerfile  compose.yaml
microservices/vlm-openvino-serving/scripts/: compress_model.sh  install_ubuntu_gpu_drivers.sh
microservices/vlm-openvino-serving/src/: app.py
microservices/vlm-openvino-serving/tests/: pytest.ini  test_app.py  test_common.py  test_data_models.py  test_utils.py
sample-applications/chat-question-and-answer/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  setup.sh
sample-applications/chat-question-and-answer-core/: .dockerignore  README.md  nginx.conf  pyproject.toml
sample-applications/chat-question-and-answer-core/app/: .env  chain.py  config.py  document.py  logger.py  server.py  utils.py
sample-applications/chat-question-and-answer-core/chart/: Chart.yaml  values.yaml
sample-applications/chat-question-and-answer-core/docker/: Dockerfile  compose.yaml
sample-applications/chat-question-and-answer-core/docs/: api-reference.md  benchmarks.md  build-from-source.md  chatqna-api.yml  deploy-with-helm.md  get-started.md
sample-applications/chat-question-and-answer-core/drivers/: install_dgpu_drivers.sh  install_igpu_drivers.sh
sample-applications/chat-question-and-answer-core/nginx_config/: nginx-gpu.conf
sample-applications/chat-question-and-answer-core/scripts/: setup_env.sh
sample-applications/chat-question-and-answer-core/tests/: README.md  conftest.py  test_server.py
sample-applications/chat-question-and-answer-core/ui/: .env  .gitignore  .npmrc  Dockerfile  env.sh  index.html  package-lock.json  package.json  vitest.setup.ts
sample-applications/chat-question-and-answer/app/: chain.py  custom_reranker.py  server.py
sample-applications/chat-question-and-answer/chart/: Chart.yaml  values.yaml  values_tgi.yaml  values_vllm.yaml
sample-applications/chat-question-and-answer/deployment-package/: application.yaml  chatqna-values-ovms.yaml  chatqna-values-tgi.yaml  chatqna-values-vllm.yaml  deployment-package.yaml
sample-applications/chat-question-and-answer/docs/: benchmarks.md  build-from-source.md  chatqna-api.yml  deploy-with-helm.md  get-started.md  how-to-performance.md  overview-architecture.md
sample-applications/chat-question-and-answer/ovms_config/: requirements.txt
sample-applications/document-summarization/: Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  setup.sh
sample-applications/document-summarization/app/: .env  config.py  server.py
sample-applications/document-summarization/chart/: Chart.yaml  values.yaml
sample-applications/document-summarization/ui/: gradio_app.py
sample-applications/video-search-and-summarization/search-ms/: pyproject.toml  server.py
(+1312 files in other folders)
