# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "MultiModal Embedding serving"
version = "0.1.1"
description = "The MultiModal Embedding serving is designed to generate embeddings for text, image URLs, base64 encoded images, video URLs, and base64 encoded videos. It leverages the CLIP (Contrastive Language-Image Pretraining) model to create these embeddings."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
gunicorn = "^23.0.0"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
opencv-python = "^4.11.0.86"
einops = "^0.8.1"
decord = "^0.6.0"
transformers = "^4.51.3"
openvino = "^2025.1.0"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"