[tool.poetry]
name = "chatqna-core"
version = "0.1"
description = "A monolithic chat-based question and answer system that leverages Intel's advanced Generative AI technologies and employs Retrieval-Augmented-Generation (RAG) techniques."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.4"
huggingface_hub = "0.27.1"
langchain = "^0.3.9"
langchain-community = "^0.3.9"
langchain-huggingface = "^0.1.2"
faiss-cpu = "1.9.0.post1"
python-multipart = ">=0.0.18"
unstructured = {extras = ["pdf", "docx"], version = ">=0.14.3"}
optimum = {extras = ["openvino", "nncf"], version = "1.24.0"}
transformers = ">=4.48.0"
structlog = "25.1.0"
uvicorn = ">=0.21.0,<0.23.0"
h11 = "0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
coverage = "^7.6.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
