[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
uvicorn = "^0.23.2"
langchain = "^0.3.8"
transformers = "4.51.0"
langchain_postgres = "^0.0.13"
langchain_openai = "^0.3.5"
psycopg-binary = "3.2.3"
langchain-community = "0.3.10"
asyncpg = "^0.30.0"
fastapi = "^0.115.0"
opentelemetry-sdk = "1.27.0"
opentelemetry-instrumentation-fastapi = "0.48b0"
openlit = "1.33.8"
httpx = "0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
