[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.llamahub]
contains_example = false
import_path = "app.simple_summary_pack.llama_index.packs.simple_summary"

[tool.llamahub.class_authors]
SimpleSummaryPack = "llama-index"

[tool.mypy]
disallow_untyped_defs = true
exclude = ["_static", "build", "examples", "notebooks", "venv"]
ignore_missing_imports = true
python_version = "3.10"

[tool.poetry]
name = "document-summarization"
version = "0.1.0"
authors = []
packages = [{ include = "*" }]
description = "Document Summarization using llama index"
exclude = ["app/simple_summary_pack/llama_index/packs/simple_summary/BUILD"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
llama-index-core = "^0.12.30"
llama-index = "^0.12.34"
fastapi = ">=0.115.2,<1.0"
poetry = "^2.1.3"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
llama-index-llms-openai-like = "^0.3.4"
gradio = "^5.29.0"
nest-asyncio = "^1.6.0"
docx2txt = "^0.9"
pyyaml = "^6.0.2"
pydantic-settings = "^2.9.1"
opentelemetry-sdk = "1.27.0"
opentelemetry-instrumentation-fastapi = "0.48b0"
openlit = "1.33.8"
httpx = "0.27.2"


[tool.poetry.group.dev.dependencies]
ipython = "8.10.0"
jupyter = "^1.0.0"
mypy = "0.991"
pre-commit = "3.2.0"
pylint = "2.15.10"
pytest = "7.2.1"
pytest-mock = "3.11.1"
tree-sitter-languages = "^1.8.0"
types-Deprecated = ">=0.1.0"
types-PyYAML = "^6.0.12.12"
types-protobuf = "^4.24.0.4"
types-redis = "4.5.5.0"
types-requests = "2.28.11.8"
types-setuptools = "67.1.0.0"

[tool.poetry.group.dev.dependencies.black]
extras = ["jupyter"]
version = "<=23.9.1,>=23.7.0"

[tool.poetry.group.dev.dependencies.codespell]
extras = ["toml"]
version = ">=v2.2.6"
