[tool.poetry]
name = "dataprep-pgvector"
version = "0.1.0"
description = "A tool for loading, parsing, and generating embeddings for PDF, DOCX, and TXT files, storing these embeddings in PGVector (Vector Store)"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
av = "13.1.0"
beautifulsoup4 = "4.12.3"
docarray = {extras = ["full"], version = "0.40.0"}
docx2txt = "0.8"
fastapi = "0.115.4"
huggingface_hub = "0.26.2"
langchain = "^0.3.9"
langchain-community = "^0.3.9"
langchain-text-splitters = ">=0.3.3,<0.4.0"
langchain_postgres = "^0.0.13"
langchain_openai = "^0.3.5"
markdown = "3.7"
numpy = "1.26.4"
pandas = "2.2.3"
pillow = "11.0.0"
psycopg = {extras = ["pool", "binary"], version = "3.2.3"}
pymupdf = "1.24.13"
pytesseract = "0.3.13"
python-docx = "1.1.2"
python-multipart = ">=0.0.18"
python-pptx = "1.0.2"
shortuuid = "1.0.13"
tiktoken = "0.8.0"
unstructured = {extras = ["pdf", "docx"], version = ">=0.14.3"}
uvicorn = ">=0.21.0,<0.23.0"
html2text = "2024.2.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
coverage = "^7.6.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
