[tool.poetry]
name = "minio-store"
version = "0.1.0"
description = "A object storage service based on MinIO to ingest files to create embeddings."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
minio = "^7.2.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.18"
gunicorn = "^23.0.0"
shortuuid = "^1.0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
coverage = "^7.6.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
