noinst_LTLIBRARIES = libgenicamapi.la

libgenicamapi_la_SOURCES = buffer.cc \
			   buffer.h \
			   config.cc \
			   config.h \
			   cport.cc \
			   cport.h \
			   device.cc \
			   device.h \
			   exception.cc \
			   exception.h \
			   gentl_wrapper.h \
			   gentl_wrapper_linux.cc \
			   image.cc \
			   image.h \
			   imagelist.cc \
			   imagelist.h \
			   image_store.cc \
			   image_store.h \
			   interface.cc \
			   interface.h \
			   pixel_formats.h \
			   pointcloud.cc \
			   pointcloud.h \
			   stream.cc \
			   stream.h \
			   system.cc \
			   system.h
